--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,11 @@
 
 /* Exemplo de como criar classes personalizadas */
 @layer components {
-  .container {
-    @apply mx-auto max-w-7xl border rounded-lg mb-6 py-1 my-1 shadow-sm sm:px-6 lg:px-8;
+    .bg-quadriculado {
+    background-image: url("./assets/images/bg-quad.png");
+    background-repeat: repeat;
+    background-size: auto;
+    opacity: 0.8;
   }
+
 }
